--- a/app/pug/index.pug
+++ b/app/pug/index.pug
@@ -29,20 +29,104 @@ block content
                      .content-shop__item
                         .icon-star
                             img.icon(src='./img/star.svg')
-                            | Низкие цены
+                            p.content__text Низкие цены
                      .content-shop__item
                         .icon-star
                             img.icon(src='./img/star.svg')
-                            | Доставка УкрПочтой бесплатно   
+                            p.content__text Доставка УкрПочтой бесплатно   
                      .content-shop__item
                         .icon-star
                             img.icon(src='./img/star.svg')
-                            | Большой выбор   
+                            p.content__text Большой выбор   
                      .content-shop__item
                         .icon-star
                             img.icon(src='./img/star.svg')
-                            | Все размеры      
-            .submain Content
-            .footer Footer Footer Footer Footer Footer Footer Footer FooterFooter Footer Footer Footer Footer Footer Footer FooterFooter Footer Footer Footer Footer Footer Footer FooterFooter Footer Footer Footer Footer Footer Footer FooterFooter Footer Footer Footer Footer Footer Footer FooterFooter Footer Footer Footer Footer Footer Footer FooterFooter Footer Footer Footer Footer Footer Footer Footer
- 
+                            p.content__text Все размеры 
+            h3.title__subname Купальники                     
+            .submain                
+                .section
+                    .section__shop
+                        img.section__pic(src='http://placekitten.com/g/250/250')
+                        p.section__price 330 грн.
+                        p.section__price_nonprice 660 грн.
+                        button.button_price Подробнее
+                    .section__shop
+                        img.section__pic(src='http://placekitten.com/g/250/250')
+                        p.section__price 330 грн.
+                        p.section__price_nonprice 660 грн.
+                        button.button_price Подробнее
+                    .section__shop
+                        img.section__pic(src='http://placekitten.com/g/250/250')
+                        p.section__price 330 грн.
+                        p.section__price_nonprice 660 грн.
+                        button.button_price Подробнее
+                    .section__shop
+                        img.section__pic(src='http://placekitten.com/g/250/250')
+                        p.section__price 330 грн.
+                        p.section__price_nonprice 660 грн.
+                        button.button_price Подробнее
+                .section        
+                    .section__shop
+                        img.section__pic(src='http://placekitten.com/g/250/250')
+                        p.section__price 330 грн.
+                        p.section__price_nonprice 660 грн.
+                        button.button_price Подробнее
+                    .section__shop
+                        img.section__pic(src='http://placekitten.com/g/250/250')
+                        p.section__price 330 грн.
+                        p.section__price_nonprice 660 грн.
+                        button.button_price Подробнее
+                    .section__shop
+                        img.section__pic(src='http://placekitten.com/g/250/250')
+                        p.section__price 330 грн.
+                        p.section__price_nonprice 660 грн.
+                        button.button_price Подробнее
+                    .section__shop
+                        img.section__pic(src='http://placekitten.com/g/250/250')
+                        p.section__price 330 грн.
+                        p.section__price_nonprice 660 грн.
+                        button.button_price Подробнее
+                .section
+                    .section__shop
+                        img.section__pic(src='http://placekitten.com/g/250/250')
+                        p.section__price 330 грн.
+                        p.section__price_nonprice 660 грн.
+                        button.button_price Подробнее
+                    .section__shop
+                        img.section__pic(src='http://placekitten.com/g/250/250')
+                        p.section__price 330 грн.
+                        p.section__price_nonprice 660 грн.
+                        button.button_price Подробнее
+                    .section__shop
+                        img.section__pic(src='http://placekitten.com/g/250/250')
+                        p.section__price 330 грн.
+                        p.section__price_nonprice 660 грн.
+                        button.button_price Подробнее
+                    .section__shop
+                        img.section__pic(src='http://placekitten.com/g/250/250')
+                        p.section__price 330 грн.
+                        p.section__price_nonprice 660 грн.
+                        button.button_price Подробнее 
+
+            .second-section  
+                p.second-section__text Создай свой неповторимый образ!
+            .third-section
+                .third-section__wrapper
+                    h2.title__third Доставка и оплата
+                    p.paragraph Оплата online картами VISA, MasterCard.
+                    p.paragraph Доставка осуществляется УкрПочтой бесплатно. После оплаты товара мы отправляем Ваш заказ ценной бандеролью 1-го класса.
+                    p.paragraph Наш магазин всегда идет на встречу клиентам и решает все возникшие вопросы. Будьте уверены, что Вы не останетесь наедине со своей проблемой, мы обязательно ее решим за Вас.
+                    h2.title__third Об интернет-магазине
+                    p.paragraph Мы рады приветствовать Вас в нашем интернет-магазине!
+                    p.paragraph Каждая женщина может почувствовать себя уникальной, может дополнить свой образ изысканными украшениями и создать свой индивидуальный и неповторимый стиль. Все изделия изготавливаются вручную, каждое изделие становится шедевром. Используемые материалы - серебро 925 пробы, муранское стекло, эмаль, кожа, драгоценные и искусственные камни.
+                    p.paragraph Любой браслет может быть прекрасным подарком, большой ассортимент дает возможность сделать отличный выбор на любой вкус и по самым низким ценам.                                       
+            .footer
+                h2.title-footer Купальники
+                p.foot The Picantini Website may be linked to the websites of such other parties
+                ul.contacts
+                    li.contacts-item vintorp.ua@gmail.com +3 8 066 841 18 92 
+                    li.contacts-item Пн-Пт с 9:00 -19:00
+                    li.contacts-item Сб с 10:00 - 18:00
+                    li.contacts-item Вс выходной
+                    li.contacts-item Киев, ул. Мечникова, 2 БЦ "Парус"
 
