--- a/app/sass/style.scss
+++ b/app/sass/style.scss
@@ -38,14 +38,14 @@ ul{
 }
 
 .container{
-  width: 80%;
-  
+  width: 60%;
+  align-items: stretch;
   display: flex;
   flex-direction: column;
 }
 
 .header{
-  
+  z-index: 10;
   position: fixed;
   background: rgba(255, 255, 255, 0.8);
   height: 80px;
@@ -85,14 +85,15 @@ ul{
 
 
 .main{
-   /*Основной раздел будет занимать все свободное место на странице*/
-   
+      
    display: flex;
    flex-direction: column;   
    min-height: 500px;
    margin-top: 80px;
    width: 100%;   
-   background: url(http://placekitten.com/1600/500);
+   background: url(../img/girl.jpg);
+   background-repeat: no-repeat;
+   background-size: cover;
 }
 
 .title__name{
@@ -139,14 +140,26 @@ ul{
 }
 
 .content-shop{
-  width: 90%;
+  width: 80%;
   display: flex;
-  justify-content: space-around;  
+  justify-content: center;  
   margin: 0 auto;
+  
 }
 
 .content-shop__item{
-  width: 20%;
+  min-width: 15%;
+  display: flex;
+  flex-direction: row;
+  margin-right: 30px;
+}
+
+.content__text{
+  color: #fff;
+  float: right;
+  text-align: center;
+  margin-top: 10px;
+  margin-left: 5px;
 }
 
 .icon{
@@ -156,14 +169,126 @@ ul{
 }
 
 .submain{
-  flex: 2;
-  min-height: 500px;
+  margin-bottom: 200px;
+  width: 100%;
+  min-height: 1000px;
+  position: relative; 
+  
+}
+
+.title__subname{
+  text-align: center;
+  width: 100%;
+  padding: 20px;
+  font-size: 25px;
+  padding-bottom: 50px;
+  text-transform: uppercase;
+}
+
+.section{
+  width: 80%;
+  margin: 0 auto;
   display: flex;
+  justify-content: space-around;
+  
+}
+
+.section__shop{
+  width: 20%;
+  display: inline-block;
+  margin: 20px;
+}
+
+.section__price{
+  text-align: center;
+  color: red;
+
+  &_nonprice{
+    text-align: center;
+    text-decoration: line-through;
+  }
+}
+
+.button_price{
+  margin: 0 auto;
+  width: auto;
+  cursor: pointer;
+  padding: 7px;
+  border-radius: 5px;
+  border: 1 px solid #ccc; 
+  background: transparent;
+  margin-left: 30%;
+
+  &:hover{
+    background: #ccc;
+  }
+}
+
+
+
+.second-section {
+  background: url(../img/wear.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 90%;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;   
+  min-height: 700px;
+  margin-bottom: 80px;    
+}
+
+.second-section__text {
+  color: #fff;
+  text-align: right;
+  margin-right: 150px;
+  position: relative;
+  margin-top: 100px;
+  font-size: 30px;
+}
+
+.third-section{
+  margin-bottom: 100px;
+  width: 100%;
+  
+}
+
+.third-section__wrapper{
+  width: 80%;
+  margin: 0 auto;
+}
+
+.title__third{
+  text-align: center;
+  padding: 20px;
+}
+
+.paragraph{
+  margin-bottom: 10px;
 }
 
 .footer{
-   /*Футер будет занимать столько места по вертикали, сколько и должен и не пикселя больше */
-   
+  width: 100%;  
+  background: dimgray;   
+  height: 200px;
+}
+
+.title-footer{
+  width: 20%;
+  
+}
+
+.foot{
+  margin: auto;
+  width: 40%;
+}
+
+.contacts{
+  width: 30%;
+  float: right;
+  text-align: right;
+  margin-right: 50px;
+  margin-top: -20px;
 }
 
 @import 'menu';
