--- a/app/pug/index.pug
+++ b/app/pug/index.pug
@@ -42,71 +42,108 @@ block content
                         .icon-star
                             img.icon(src='./img/star.svg')
                             p.content__text Все размеры 
-            h3.title__subname Купальники                     
+            h3.title__subname Товары, которое вас могут заинтересовать                     
             .submain                
                 .section
                     .section__shop
                         img.section__pic(src='http://placekitten.com/g/250/250')
                         p.section__price 330 грн.
                         p.section__price_nonprice 660 грн.
-                        button.button_price Подробнее
+                        button.button_price 
+                            a.button__btn(href='#win1') Подробнее
+                        a#win1.overlay(href='#x')    
+                        include popup
+   
                     .section__shop
                         img.section__pic(src='http://placekitten.com/g/250/250')
                         p.section__price 330 грн.
                         p.section__price_nonprice 660 грн.
-                        button.button_price Подробнее
+                        button.button_price 
+                            a.button__btn(href='#win2') Подробнее
+                        a#win2.overlay(href='#x')    
+                        include popup    
                     .section__shop
                         img.section__pic(src='http://placekitten.com/g/250/250')
                         p.section__price 330 грн.
                         p.section__price_nonprice 660 грн.
-                        button.button_price Подробнее
+                        button.button_price 
+                            a.button__btn(href='#win3') Подробнее
+                        a#win3.overlay(href='#x')    
+                        include popup    
                     .section__shop
                         img.section__pic(src='http://placekitten.com/g/250/250')
                         p.section__price 330 грн.
                         p.section__price_nonprice 660 грн.
-                        button.button_price Подробнее
+                        button.button_price 
+                            a.button__btn(href='#win4') Подробнее
+                        a#win4.overlay(href='#x')    
+                        include popup    
                 .section        
                     .section__shop
                         img.section__pic(src='http://placekitten.com/g/250/250')
                         p.section__price 330 грн.
                         p.section__price_nonprice 660 грн.
-                        button.button_price Подробнее
+                        button.button_price 
+                            a.button__btn(href='#win5') Подробнее
+                        a#win5.overlay(href='#x')    
+                        include popup    
                     .section__shop
                         img.section__pic(src='http://placekitten.com/g/250/250')
                         p.section__price 330 грн.
                         p.section__price_nonprice 660 грн.
-                        button.button_price Подробнее
+                        button.button_price 
+                            a.button__btn(href='#win6') Подробнее
+                        a#win6.overlay(href='#x')    
+                        include popup    
                     .section__shop
                         img.section__pic(src='http://placekitten.com/g/250/250')
                         p.section__price 330 грн.
                         p.section__price_nonprice 660 грн.
-                        button.button_price Подробнее
+                        button.button_price 
+                            a.button__btn(href='#win7') Подробнее
+                        a#win7.overlay(href='#x')    
+                        include popup    
                     .section__shop
                         img.section__pic(src='http://placekitten.com/g/250/250')
                         p.section__price 330 грн.
                         p.section__price_nonprice 660 грн.
-                        button.button_price Подробнее
+                        button.button_price 
+                            a.button__btn(href='#win8') Подробнее
+                        a#win8.overlay(href='#x')    
+                        include popup    
                 .section
                     .section__shop
                         img.section__pic(src='http://placekitten.com/g/250/250')
                         p.section__price 330 грн.
                         p.section__price_nonprice 660 грн.
-                        button.button_price Подробнее
+                        button.button_price 
+                            a.button__btn(href='#win9') Подробнее
+                        a#win9.overlay(href='#x')    
+                        include popup    
                     .section__shop
                         img.section__pic(src='http://placekitten.com/g/250/250')
                         p.section__price 330 грн.
                         p.section__price_nonprice 660 грн.
-                        button.button_price Подробнее
+                        button.button_price 
+                            a.button__btn(href='#win10') Подробнее
+                        a#win10.overlay(href='#x')    
+                        include popup    
                     .section__shop
                         img.section__pic(src='http://placekitten.com/g/250/250')
                         p.section__price 330 грн.
                         p.section__price_nonprice 660 грн.
-                        button.button_price Подробнее
+                        button.button_price 
+                            a.button__btn(href='#win11') Подробнее
+                        a#win11.overlay(href='#x')    
+                        include popup    
                     .section__shop
                         img.section__pic(src='http://placekitten.com/g/250/250')
                         p.section__price 330 грн.
                         p.section__price_nonprice 660 грн.
-                        button.button_price Подробнее 
+                        button.button_price 
+                            a.button__btn(href='#win12') Подробнее 
+                        a#win2.overlay(href='#x')    
+                        include popup    
 
             .second-section  
                 p.second-section__text Создай свой неповторимый образ!
@@ -121,12 +158,13 @@ block content
                     p.paragraph Каждая женщина может почувствовать себя уникальной, может дополнить свой образ изысканными украшениями и создать свой индивидуальный и неповторимый стиль. Все изделия изготавливаются вручную, каждое изделие становится шедевром. Используемые материалы - серебро 925 пробы, муранское стекло, эмаль, кожа, драгоценные и искусственные камни.
                     p.paragraph Любой браслет может быть прекрасным подарком, большой ассортимент дает возможность сделать отличный выбор на любой вкус и по самым низким ценам.                                       
             .footer
-                h2.title-footer Купальники
-                p.foot The Picantini Website may be linked to the websites of such other parties
-                ul.contacts
-                    li.contacts-item vintorp.ua@gmail.com +3 8 066 841 18 92 
-                    li.contacts-item Пн-Пт с 9:00 -19:00
-                    li.contacts-item Сб с 10:00 - 18:00
-                    li.contacts-item Вс выходной
-                    li.contacts-item Киев, ул. Мечникова, 2 БЦ "Парус"
+                .footer-foot
+                    h2.title-footer Купальники
+                    p.foot Сайт разработан командой TookieTookie
+                    ul.contacts
+                        li.contacts-item vintorp.ua@gmail.com +3 8 066 841 18 92 
+                        li.contacts-item Пн-Пт с 9:00 -19:00
+                        li.contacts-item Сб с 10:00 - 18:00
+                        li.contacts-item Вс выходной
+                        li.contacts-item Киев, ул. Мечникова, 2 БЦ "Парус"
 
