--- a/app/css/style.css
+++ b/app/css/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 @import url(foundation.css);
 @import url(equalize.min.css);
 * {
@@ -14,7 +15,11 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'Roboto', Arial,sans-serif;
-  line-height: 1.42; }
+  line-height: 1.42;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex; }
 
 .wrapper {
   position: relative;
@@ -55,7 +60,7 @@ ul {
 .header {
   z-index: 10;
   position: fixed;
-  background: rgba(255, 255, 255, 0.8);
+  background: rgba(255, 255, 255, 0.9);
   height: 80px;
   width: 100%;
   top: 0;
@@ -194,34 +199,31 @@ ul {
   vertical-align: middle; }
 
 .submain {
-  margin-bottom: 200px;
-  width: 100%;
-  min-height: 1000px;
-  position: relative; }
+  text-align: center;
+  margin: 10px auto auto;
+  height: auto;
+  max-width: 1300px;
+  background-color: white;
+  padding: 10px 10px 10px; }
 
 .title__subname {
   text-align: center;
   width: 100%;
-  padding: 20px;
+  padding-top: 20px;
   font-size: 25px;
-  padding-bottom: 50px;
   text-transform: uppercase; }
 
 .section {
-  width: 80%;
-  margin: 0 auto;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-justify-content: space-around;
-      -ms-flex-pack: distribute;
-          justify-content: space-around; }
+  text-align: center;
+  margin: 50px auto auto;
+  height: auto;
+  width: 100%;
+  background-color: white;
+  padding: 10px 10px 10px; }
 
 .section__shop {
-  width: 20%;
   display: inline-block;
-  margin: 20px; }
+  margin: 0 20px; }
 
 .section__price {
   text-align: center;
@@ -238,10 +240,13 @@ ul {
   -webkit-border-radius: 5px;
           border-radius: 5px;
   border: 1 px solid #ccc;
-  background: transparent;
-  margin-left: 30%; }
+  background: transparent; }
   .button_price:hover {
     background: #ccc; }
+
+.button__btn {
+  text-decoration: none;
+  color: black; }
 
 .second-section {
   background: url(../img/wear.jpg);
@@ -287,18 +292,190 @@ ul {
 .footer {
   width: 100%;
   background: dimgray;
-  height: 200px; }
+  height: auto; }
 
-.title-footer {
-  width: 20%; }
+.footer-foot {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  width: 70%;
+  margin: 0 auto; }
 
 .foot {
-  margin: auto;
-  width: 40%; }
+  -webkit-box-flex: 1;
+  -webkit-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  margin-bottom: 70px; }
+
+.title-footer {
+  -webkit-box-flex: 1;
+  -webkit-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  margin-bottom: 70px; }
 
 .contacts {
-  width: 30%;
-  float: right;
+  -webkit-box-flex: 1;
+  -webkit-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
   text-align: right;
   margin-right: 50px;
-  margin-top: -20px; }
+  padding-top: 20px; }
+
+/*** Стили относящиеся к модальному окну и содержанию ***/
+.popup h1,
+.popup h2,
+.popup h3 {
+  color: #008000;
+  text-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
+  font-weight: normal; }
+
+.popup h1 {
+  /* заголовок 1 */
+  font-size: 24px; }
+
+.popup h2 {
+  /* заголовок 2 */
+  font-size: 1.5em; }
+
+.popup h3 {
+  /* заголовок 3 */
+  font-size: 1.2em; }
+
+/* Базовые стили слоя затемнения и модального окна  */
+.overlay {
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 9999;
+  visibility: hidden;
+  /* фон затемнения */
+  background-color: rgba(0, 0, 0, 0.7);
+  opacity: 0;
+  position: fixed;
+  /* фиксированное поцизионирование */
+  cursor: default;
+  /* тип курсора */
+  -webkit-transition: all 0.6s;
+  transition: all 0.6s; }
+
+.overlay:target {
+  visibility: visible;
+  opacity: 1; }
+
+/* стили модального окна */
+.popup {
+  top: 0;
+  right: 0;
+  left: 50%;
+  font-size: 14px;
+  font-family: 'Tahoma', Arial, sans-serif;
+  z-index: 10000;
+  margin: 0 auto;
+  width: 100%;
+  min-width: 320px;
+  max-width: 820px;
+  /* фиксированное позиционирование, окно стабильно при прокрутке */
+  position: fixed;
+  padding: 15px;
+  border: 1px solid #383838;
+  /* скругление углов */
+  -webkit-border-radius: 4px;
+          border-radius: 4px;
+  background-color: #FFFFFF;
+  /* внешняя тень */
+  -webkit-box-shadow: 0 15px 20px rgba(0, 0, 0, 0.22), 0 19px 60px rgba(0, 0, 0, 0.3);
+          box-shadow: 0 15px 20px rgba(0, 0, 0, 0.22), 0 19px 60px rgba(0, 0, 0, 0.3);
+  /* трансформация */
+  -webkit-transform: translate(-50%, -150%);
+      -ms-transform: translate(-50%, -150%);
+          transform: translate(-50%, -150%);
+  /* анимируем трансформацию */
+  -webkit-transition: -webkit-transform 0.6s ease-out;
+  transition: -webkit-transform 0.6s ease-out;
+  transition: transform 0.6s ease-out;
+  transition: transform 0.6s ease-out, -webkit-transform 0.6s ease-out; }
+
+/* активируем мод. окно */
+.overlay:target + .popup {
+  top: 50%;
+  -webkit-transform: translate(-50%, -50%);
+      -ms-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%); }
+
+/* формируем кнопку закрытия */
+.close {
+  position: absolute;
+  padding: 0;
+  top: -10px;
+  right: -10px;
+  width: 22px;
+  height: 22px;
+  border: 2px solid #ccc;
+  -webkit-border-radius: 50%;
+          border-radius: 50%;
+  background-color: rgba(61, 61, 61, 0.8);
+  -webkit-box-shadow: 0px 0px 10px #000;
+          box-shadow: 0px 0px 10px #000;
+  text-align: center;
+  text-decoration: none;
+  font-weight: bold;
+  line-height: 20px;
+  -webkit-transition: background-color ease .7s;
+  transition: background-color ease .7s; }
+
+.close:before {
+  color: rgba(255, 255, 255, 0.9);
+  content: '\2715';
+  text-shadow: 0 -1px rgba(0, 0, 0, 0.9);
+  font-size: 12px; }
+
+.close:hover {
+  background-color: rgba(252, 20, 0, 0.8); }
+
+.popup p {
+  margin: 0;
+  padding: 10px; }
+
+/* планшет */
+@media only screen and (min-width: 768px) and (max-width: 959px) {
+  .popup {
+    width: 95%; } }
+
+/* смарт */
+@media only screen and (min-width: 320px) and (max-width: 767px) {
+  .popup {
+    width: 85%; } }
+
+/* изображения внутри окна */
+.popup img {
+  display: block;
+  border: none;
+  width: 100%;
+  height: auto; }
+
+/* миниатюры слева/справа */
+.pic-left,
+.pic-right {
+  width: 25%;
+  height: auto; }
+
+.pic-left {
+  float: left;
+  margin: 5px 15px 5px 0; }
+
+.pic-right {
+  float: right;
+  margin: 5px 0 5px 15px; }
