--- a/app/pug/_template.pug
+++ b/app/pug/_template.pug
@@ -19,7 +19,7 @@ html
     
 
 
-
+    script(src='http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js')
     <!--[if lt IE 9]>
     script(src="http://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.2/html5shiv.min.js")
     <![endif]-->
