--- a/app/pug/_template.pug
+++ b/app/pug/_template.pug
@@ -14,6 +14,7 @@ html
 
     
     link(rel='stylesheet' href='./css/style.min.css')
+    link(rel='stylesheet' href='./css/fotorama.css')
     link(href='http://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.css', rel='stylesheet')
     
 
