--- a/app/pug/_template.pug
+++ b/app/pug/_template.pug
@@ -13,8 +13,8 @@ html
     link(rel='shortcut icon', href='./img/favicon.ico', type='image/png')
 
     
-    link(rel='stylesheet' href='./css/style.min.css')
-    link(rel='stylesheet' href='./css/fotorama.css')
+    link(rel='stylesheet' href='css/style.min.css')
+    link(rel='stylesheet' href='css/fotorama.css')
     
     
 
@@ -25,7 +25,7 @@ html
 
   body
     block content
-  script(src='./js/fotorama.js' async)  
+  script(src='js/fotorama.js' async)  
   script(src='http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js')
   script(src='http://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.js')
   
