another slider yet

--- a/app/pug/popup.pug
+++ b/app/pug/popup.pug
@@ -1,27 +1,5 @@
 
-.popup
-  .pic-left
-    a(href='http://webformyself.com/aff/dobrovoi/practicerubber')
-      img(src='http://dbmast.ru/wp-content/uploads/2012/11/DVD009.jpg', alt='Практический курс резиновой верстки')
-  h2 Уважаемые друзья!
-  p
-    | Обращаю Ваше внимание, что 
-    strong 27
-    |  ноября, мои коллеги из команды 
-    strong WebForMySelf
-    |  запустили абсолютно новый обучающий курс:
-  h3 « Практика резиновой верстки »
-  p
-    | Хотите, чтобы ваш сайт отображался красиво и элегантно в широкоформатных мониторах и также красиво, и аккуратно ужимался в узких?
-  h3 Тогда не тяните резину !
-  p
-    | Видеокурс "Практика резиновой верстки сайта" - это 
-    strong 37
-    |  качественных уроков, более 
-    strong 19
-    |  часов видео с подробными инструкциями.
-  p
-    | Без воды. Лишней теории. Убитого времени. Просто взять и сделать!
-  p(style='text-align: center;')
-    a.button.button-green(href='http://webformyself.com/aff/dobrovoi/practicerubber') Получить »
+.popup    
+  include slider
+    
   a.close(title='Закрыть', href='#close')
