--- a/app/sass/style.scss
+++ b/app/sass/style.scss
@@ -306,11 +306,15 @@ ul{
   min-height: 600px;
 }
 
+
+
+
 @import 'menu';
 @import 'popup';
+@import 'slider';
 @import "foundation.css";
-@import "fotorama.css";
-@import "equalize.min.css";
+
+
 
 
 
