--- a/app/pug/slider.pug
+++ b/app/pug/slider.pug
@@ -8,15 +8,15 @@
 		#overflow
 			.inner
 				.page
-					img(src='http://placehold.it/588x250', alt='')
+					img(src='http://placekitten.com/g/588/250', alt='')
 				.page
-					img(src='http://placehold.it/588x250', alt='')
+					img(src='http://placekitten.com/g/588/250', alt='')
 				.page
-					img(src='http://placehold.it/588x250', alt='')
+					img(src='http://placekitten.com/g/588/250', alt='')
 				.page
-					img(src='http://placehold.it/588x250', alt='')
+					img(src='http://placekitten.com/g/588/250', alt='')
 				.page
-					img(src='http://placehold.it/588x250', alt='')
+					img(src='http://placekitten.com/g/588/250', alt='')
 	#controls
 		label(for='slide1')
 		label(for='slide2')
