--- a/app/pug/index.pug
+++ b/app/pug/index.pug
@@ -167,4 +167,6 @@ block content
                         li.contacts-item Сб с 10:00 - 18:00
                         li.contacts-item Вс выходной
                         li.contacts-item Киев, ул. Мечникова, 2 БЦ "Парус"
-            
+            .fotorama
+                img(src='http://s.fotorama.io/1.jpg')
+                img(src='http://s.fotorama.io/2.jpg')
