--- a/app/pug/_template.pug
+++ b/app/pug/_template.pug
@@ -14,7 +14,7 @@ html
 
     
     link(rel='stylesheet' href='css/style.min.css')
-    link(href='http://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.css', rel='stylesheet')  
+    link(href='https://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.css', rel='stylesheet')  
 
   body
     block content
