--- a/app/pug/popup.pug
+++ b/app/pug/popup.pug
@@ -1,4 +1,13 @@
 
 .popup    
-  include slider    
+  .fotorama(data-allowfullscreen='native', data-nav='thumbs', data-loop='true', data-autoplay='true')
+    img(src='./img/girl.jpg')
+    img(src='./img/wear.jpg')
+    img(src='./img/girl.jpg')
+    img(src='./img/wear.jpg')
+    img(src='./img/girl.jpg')
+    img(src='./img/wear.jpg')
+    img(src='./img/girl.jpg')
+    img(src='./img/wear.jpg')
+    img(src='./img/girl.jpg')                                 
   a.close(title='Закрыть', href='#close')
