--- a/app/sass/style.scss
+++ b/app/sass/style.scss
@@ -63,14 +63,13 @@ ul{
 }
 
 .menu__list{
-  flex: 2;
-  
-  display: flex;
-   
+  flex: 2;  
+  display: flex;   
 }
 
 .phone{
   flex: 1;
+  color: #01234c;
 }
 
 .menu__item{
@@ -79,9 +78,23 @@ ul{
 
 .navigation-link{
   text-decoration: none;
-  color: #ccc;
+  color: #014b60;
+  transition: color .25s cubic-bezier(0.64, 0.57, 0.67, 1.53);
+
+  &:hover{
+    color: #a6d0ef;
+  }
 }
 
+.menu__link{
+  color: #01234c;
+  cursor: pointer;
+  transition: color .25s cubic-bezier(0.64, 0.57, 0.67, 1.53);
+
+  &:hover{
+    color: #a6d0ef;
+  }
+}
 
 .main{
       
@@ -173,7 +186,7 @@ ul{
   height: auto;
   max-width: 1300px;
   background-color: white;
-  padding: 10px 10px 10px;   
+  padding: 10px 10px 10px;  
   
 }
 
@@ -232,16 +245,17 @@ ul{
 
 .second-section {
   font-family: 'Roboto', sans-serif;
-  font-size: 5em;
+  font-size: 40px;
+  color: #e0f7e6;
   letter-spacing:-0.03em;
-  font-weight: 600;  
+  font-weight: 600;    
   background-repeat: no-repeat;
   background-size: cover;
-  width: 90%;
+  width: 100%;
   margin: 0 auto;
   display: flex;
   flex-direction: column;   
-  min-height: 700px;
+  min-height: 500px;
   margin-bottom: 80px;    
 }
 
@@ -252,6 +266,20 @@ ul{
   position: relative;
   margin-top: 100px;
   font-size: 30px;
+}
+
+.text__section{
+ position: absolute;
+ left: 10%;
+ top: 20%;
+ 
+}
+
+.img__section{
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  padding-right: 250px;
 }
 
 .third-section{
@@ -276,7 +304,7 @@ ul{
 
 .footer{   
   width: 100%;  
-  background: dimgray;  
+  background: #014b60;  
   height: auto;  
 }
 
@@ -291,38 +319,109 @@ ul{
 .foot{
   flex: 1; 
   margin-bottom: 70px;  
+  margin-top: 30px;
+  color: #a6d0ef;
+  font-weight: 400;
 }
 
 .title-footer{
   flex: 1;
   margin-bottom: 70px;
+  margin-top: 30px;
+  color: #a6d0ef;
+  transition: color .25s cubic-bezier(0.64, 0.57, 0.67, 1.53);
+  cursor: pointer;
+
+  &:hover{
+    color: #01234c;
+  }
 }
 
 .contacts{
   flex: 1;  
   text-align: right;
   margin-right: 50px;
-  padding-top: 20px;
+  color: #a6d0ef;
 }
 
-svg {
-    width: 90%;
-    height: 100%;
-    position:absolute;
-}
-svg text {
-    text-anchor: middle;
-}
-svg mask rect {
-    fill: rgba(255, 255, 255, 0.6);
-}
-svg > rect {
-    fill: #fff;
-    -webkit-mask: url(#mask);
-    mask: url(#mask);
-    
+.backgrounds {
+      .background {
+         position: relative;         
+         height:20px;
+         left:0px;
+         right:0px;
+         top:120px;
+         animation: bg 2s ease-in-out infinite;
+         .head {
+            position: absolute;
+            bottom:100%;
+            left:0px;
+            right:0px;
+            height:20px;
+         }
+         &.layer-3 {
+            background-color:#a9e8db;
+            top:135px;
+            .head {
+               background:url(../img/grapefruitwave_3.svg);               
+               background-position:-60px 0px;
+            }
+         }
+         &.layer-2 {
+            background-color:#01bfc4;
+            top:128px;            
+            animation-delay:-0.5s;
+            .head {
+               background:url(../img/grapefruitwave_2.svg); //changing opacity doesn't give the right effect
+               background-position:-40px 0px;
+            }
+         }
+         &.layer-1 {
+            height:350px;
+            background-color:#0184a9;
+            animation-delay:-1s;
+            .head {
+               background:url(../img/grapefruitwave_1.svg);
+               
+            }
+         }
+      }
+      
+   }
+   section.content {
+      position: absolute;
+      top:150px;
+      left:20px;
+      right:220px;
+      color:#fff;
+      
+      h1, h2, h3, h4, h5, h6, p {
+         margin:0;
+         font-weight:400;
+      }
+      h1 {
+         font-size:32px;
+      }
+   }
+
+
+@keyframes bg {
+   0%, 100% {
+      transform:translateY(10px);
+   }
+   50% {
+      transform:translateY(20px);
+   }
 }
 
+@keyframes straw {
+   0%, 100% {
+      transform:translateY(-1px) rotate(6deg);
+   }
+   50% {
+      transform:translateY(0px) rotate(6deg);
+   }
+}
 
 
 
