--- a/app/pug/index.pug
+++ b/app/pug/index.pug
@@ -30,20 +30,20 @@ block content
                      .content-shop__item
                         .icon-star
                             img.icon(src='./img/star.svg')
-                            p.content__text Низкие цены
+                        p.content__text Низкие цены
                      .content-shop__item
                         .icon-star
                             img.icon(src='./img/star.svg')
-                            p.content__text Доставка УкрПочтой бесплатно   
+                        p.content__text Доставка УкрПочтой бесплатно   
                      .content-shop__item
                         .icon-star
                             img.icon(src='./img/star.svg')
-                            p.content__text Большой выбор   
+                        p.content__text Большой выбор   
                      .content-shop__item
                         .icon-star
                             img.icon(src='./img/star.svg')
-                            p.content__text Все размеры 
-            h3.title__subname#one Товары, которое вас могут заинтересовать                     
+                        p.content__text Все размеры 
+            h3.title__subname#one Товары, которые вас могут заинтересовать                     
             .submain                
                 .section
                     .section__shop
