--- a/app/css/popup.css
+++ b/app/css/popup.css
@@ -3,9 +3,10 @@
 .popup h1,
 .popup h2,
 .popup h3 {
-  color: #008000;
-  text-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
-  font-weight: normal; }
+  color: #01234c;
+  font-size: 35px;
+  font-weight: bold;
+  text-align: center; }
 
 .popup h1 {
   /* заголовок 1 */
@@ -17,7 +18,8 @@
 
 .popup h3 {
   /* заголовок 3 */
-  font-size: 1.2em; }
+  font-size: 25px;
+  text-align: center; }
 
 /* Базовые стили слоя затемнения и модального окна  */
 .overlay {
@@ -46,7 +48,7 @@
   top: 0;
   right: 0;
   left: 50%;
-  font-size: 14px;
+  font-size: 16px;
   font-family: 'Tahoma', Arial, sans-serif;
   z-index: 10000;
   margin: 0 auto;
@@ -113,7 +115,7 @@
 
 .popup p {
   margin: 0;
-  padding: 10px; }
+  padding: 5px; }
 
 /* планшет */
 @media only screen and (min-width: 768px) and (max-width: 959px) {
@@ -139,3 +141,45 @@
 .pic-right {
   float: right;
   margin: 5px 0 5px 15px; }
+
+.section__name {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: row;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-flex-wrap: wrap;
+      -ms-flex-wrap: wrap;
+          flex-wrap: wrap;
+  margin-bottom: 10px; }
+
+.popup__wear {
+  width: 80%;
+  margin: 0 auto; }
+
+.section__par {
+  font-size: 20px;
+  color: #01234c; }
+
+.section__item {
+  -webkit-box-flex: 1;
+  -webkit-flex: 1;
+      -ms-flex: 1;
+          flex: 1; }
+
+.button__section {
+  padding: 10px;
+  -webkit-border-radius: 4px;
+          border-radius: 4px;
+  border: none;
+  background: #a6d0ef;
+  color: #014b60;
+  cursor: pointer;
+  margin: 2px; }
+  .button__section:hover {
+    background: #014b60;
+    color: #a6d0ef; }
