--- a/app/css/style.css
+++ b/app/css/style.css
@@ -143,6 +143,9 @@ ul {
   padding-top: 15px;
   text-align: center;
   margin-bottom: 20px; }
+  .title__name_dark {
+    padding-top: 0;
+    margin-bottom: 0; }
 
 .title__big {
   text-align: center;
@@ -211,6 +214,9 @@ ul {
   height: 40px;
   vertical-align: middle; }
 
+.title__subname {
+  color: #014b60; }
+
 .submain {
   text-align: center;
   margin: 10px auto auto;
@@ -236,14 +242,15 @@ ul {
 
 .section__shop {
   display: inline-block;
-  margin: 0 20px; }
+  margin: 5px 20px; }
 
 .section__price {
   text-align: center;
   color: red; }
   .section__price_nonprice {
     text-align: center;
-    text-decoration: line-through; }
+    text-decoration: line-through;
+    color: #01234c; }
 
 .button_price {
   margin: 0 auto;
@@ -252,14 +259,17 @@ ul {
   padding: 7px;
   -webkit-border-radius: 5px;
           border-radius: 5px;
-  border: 1 px solid #ccc;
-  background: transparent; }
+  border: none;
+  color: #a6d0ef;
+  background: #014b60; }
   .button_price:hover {
-    background: #ccc; }
+    background: #a6d0ef; }
 
 .button__btn {
   text-decoration: none;
-  color: black; }
+  color: #a6d0ef; }
+  .button__btn:hover {
+    color: #014b60; }
 
 .second-section {
   font-family: 'Roboto', sans-serif;
@@ -312,7 +322,10 @@ ul {
 
 .title__third {
   text-align: center;
-  padding: 20px; }
+  padding: 20px;
+  color: #01234c;
+  background: #a6d0ef;
+  margin-bottom: 10px; }
 
 .paragraph {
   margin-bottom: 10px; }
@@ -451,13 +464,48 @@ section.content {
     -webkit-transform: translateY(0px) rotate(6deg);
             transform: translateY(0px) rotate(6deg); } }
 
+@media only screen and (max-width: 959px) {
+  .header {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column; }
+  .phone {
+    display: none; } }
+
+@media only screen and (max-width: 992px) {
+  .footer-foot {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column; }
+  .title-footer {
+    margin-top: 5px;
+    margin-bottom: 5px; }
+  .foot {
+    margin-top: 5px;
+    margin-bottom: 5px; }
+  .contacts {
+    text-align: center;
+    margin-right: 0;
+    border-top: 1px solid #a6d0ef; }
+  .img__section {
+    padding-right: 0; } }
+
+@media only screen and (max-width: 1200px) {
+  .submain {
+    width: 60%; } }
+
 /*** Стили относящиеся к модальному окну и содержанию ***/
 .popup h1,
 .popup h2,
 .popup h3 {
-  color: #008000;
-  text-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
-  font-weight: normal; }
+  color: #01234c;
+  font-size: 35px;
+  font-weight: bold;
+  text-align: center; }
 
 .popup h1 {
   /* заголовок 1 */
@@ -469,7 +517,8 @@ section.content {
 
 .popup h3 {
   /* заголовок 3 */
-  font-size: 1.2em; }
+  font-size: 25px;
+  text-align: center; }
 
 /* Базовые стили слоя затемнения и модального окна  */
 .overlay {
@@ -498,7 +547,7 @@ section.content {
   top: 0;
   right: 0;
   left: 50%;
-  font-size: 14px;
+  font-size: 16px;
   font-family: 'Tahoma', Arial, sans-serif;
   z-index: 10000;
   margin: 0 auto;
@@ -565,7 +614,7 @@ section.content {
 
 .popup p {
   margin: 0;
-  padding: 10px; }
+  padding: 5px; }
 
 /* планшет */
 @media only screen and (min-width: 768px) and (max-width: 959px) {
@@ -591,6 +640,48 @@ section.content {
 .pic-right {
   float: right;
   margin: 5px 0 5px 15px; }
+
+.section__name {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: row;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-flex-wrap: wrap;
+      -ms-flex-wrap: wrap;
+          flex-wrap: wrap;
+  margin-bottom: 10px; }
+
+.popup__wear {
+  width: 80%;
+  margin: 0 auto; }
+
+.section__par {
+  font-size: 20px;
+  color: #01234c; }
+
+.section__item {
+  -webkit-box-flex: 1;
+  -webkit-flex: 1;
+      -ms-flex: 1;
+          flex: 1; }
+
+.button__section {
+  padding: 10px;
+  -webkit-border-radius: 4px;
+          border-radius: 4px;
+  border: none;
+  background: #a6d0ef;
+  color: #014b60;
+  cursor: pointer;
+  margin: 2px; }
+  .button__section:hover {
+    background: #014b60;
+    color: #a6d0ef; }
 
 #slider {
   margin: 0 auto;
