--- a/app/pug/popup.pug
+++ b/app/pug/popup.pug
@@ -1,5 +1,34 @@
 
-.popup    
+.popup 
+  .popup__wear
+    h3.title__name.title__name_dark Интернет-магазин купальников
+    p.section__price.section__price_popup 330 грн.
+    p.section__price_nonprice 660 грн.   
+    p.section__description Браслет серебряный; вид цепочки - змейка; камни - кубический цирконий; подвески-шарм из серебра с муранским стеклом
+    p.section__description Доставка осуществляется УкрПочтой бесплатно.
+    p.section__par Размеры
+    ul.section__name 
+      li.section__item S        
+      li.section__item M        
+      li.section__item L        
+      li.section__item XL
+    ul.section__name
+      li.section__item  
+        button.button__section 
+            img.button__pic(src='./img/favicon.ico')
+            | Купить!
+      li.section__item  
+        button.button__section 
+            img.button__pic(src='./img/favicon.ico')
+            | Купить!  
+      li.section__item  
+        button.button__section 
+            img.button__pic(src='./img/favicon.ico')
+            | Купить!  
+      li.section__item  
+        button.button__section 
+            img.button__pic(src='./img/favicon.ico')
+            | Купить!                      
   .fotorama(data-allowfullscreen='native', data-nav='thumbs', data-loop='true', data-autoplay='true')
     img(src='./img/girl.jpg')
     img(src='./img/wear.jpg')
