--- a/app/sass/popup.scss
+++ b/app/sass/popup.scss
@@ -2,9 +2,10 @@
 .popup h1,
 .popup h2,
 .popup h3 {
-color: #008000;
-text-shadow: 0 1px 3px rgba(0,0,0,.3);
-font-weight: normal;
+color: #01234c;
+font-size: 35px;
+font-weight: bold;
+text-align: center;
 }
 .popup h1 { /* заголовок 1 */
 font-size:24px;
@@ -13,7 +14,8 @@ font-size:24px;
 font-size: 1.5em;
 }
 .popup h3 { /* заголовок 3 */
-font-size: 1.2em;
+font-size: 25px;
+text-align: center;
 }
 /* Базовые стили слоя затемнения и модального окна  */
 .overlay {
@@ -40,7 +42,7 @@ opacity: 1;
 top: 0;
 right: 0;
 left: 50%;
-font-size: 14px;
+font-size: 16px;
 font-family: 'Tahoma', Arial, sans-serif;
 z-index: 10000;
 margin: 0 auto;
@@ -97,7 +99,7 @@ background-color: rgba(252, 20, 0, 0.8);
 }
 .popup p {
 margin: 0;
-padding: 10px;
+padding: 5px;
 }
 /* планшет */
 @media only screen and (min-width: 768px) and (max-width: 959px) {
@@ -127,3 +129,39 @@ padding: 10px;
     float: right;
     margin: 5px 0 5px 15px;
 }
+
+.section__name{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    margin-bottom: 10px;
+}
+
+.popup__wear{
+    width: 80%;
+    margin: 0 auto;
+}
+
+.section__par{
+    font-size: 20px;
+    color: #01234c;
+}
+
+.section__item{
+    flex: 1;
+}
+
+.button__section{
+    padding: 10px;
+    border-radius: 4px;
+    border: none;
+    background: #a6d0ef;
+    color: #014b60;
+    cursor: pointer;
+    margin: 2px;
+
+    &:hover{
+        background: #014b60;
+        color: #a6d0ef;
+    }
+} 
