--- a/app/pug/index.pug
+++ b/app/pug/index.pug
@@ -22,7 +22,7 @@ block content
                     | Стильные купальники 
                     br
                     | для незабываемого отдыха
-                h2.title__small Лучшие купальники по самым лучшим ценам!
+                h2.title__small Купальники по самым лучшим ценам!
                 button.button 
                     img.button__pic(src='./img/favicon.ico')
                     | Купить в один клик!
@@ -32,7 +32,7 @@ block content
                             img.icon(src='./img/star.svg')
                         p.content__text Низкие цены
                      .content-shop__item
-                        .icon-star
+                        .icon-star_iconed
                             img.icon(src='./img/star.svg')
                         p.content__text Доставка УкрПочтой бесплатно   
                      .content-shop__item
