--- a/app/css/popup.css
+++ b/app/css/popup.css
@@ -48,6 +48,15 @@
   top: 0;
   right: 0;
   left: 50%;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
   font-size: 16px;
   font-family: 'Tahoma', Arial, sans-serif;
   z-index: 10000;
@@ -158,8 +167,10 @@
   margin-bottom: 10px; }
 
 .popup__wear {
-  width: 80%;
-  margin: 0 auto; }
+  -webkit-box-flex: 1;
+  -webkit-flex: 1;
+      -ms-flex: 1;
+          flex: 1; }
 
 .section__par {
   font-size: 20px;
@@ -172,14 +183,50 @@
           flex: 1; }
 
 .button__section {
-  padding: 10px;
+  padding: 5px;
   -webkit-border-radius: 4px;
           border-radius: 4px;
   border: none;
   background: #a6d0ef;
-  color: #014b60;
   cursor: pointer;
   margin: 2px; }
   .button__section:hover {
-    background: #014b60;
+    background: #014b60; }
+
+.popup__button {
+  text-decoration: none;
+  color: #014b60; }
+  .popup__button:hover {
     color: #a6d0ef; }
+
+.form-group {
+  text-align: left;
+  margin-left: 5px;
+  margin-top: 10px; }
+
+.delivery {
+  text-align: left;
+  margin-left: 5px;
+  margin-top: 10px; }
+
+.deliv {
+  text-align: left;
+  padding: 0;
+  margin: 0; }
+
+.group__form {
+  margin-left: 30px;
+  padding: 5px;
+  -webkit-border-radius: 4px;
+          border-radius: 4px; }
+
+.group__input {
+  margin-left: 53px;
+  padding: 5px;
+  -webkit-border-radius: 4px;
+          border-radius: 4px; }
+
+.group__select {
+  padding: 5px;
+  -webkit-border-radius: 4px;
+          border-radius: 4px; }
