--- a/app/css/style.css
+++ b/app/css/style.css
@@ -492,7 +492,13 @@ section.content {
     margin-right: 0;
     border-top: 1px solid #a6d0ef; }
   .img__section {
-    padding-right: 0; } }
+    padding-right: 0; }
+  .popup {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column; } }
 
 @media only screen and (max-width: 620px) {
   .content-shop {
@@ -506,11 +512,15 @@ section.content {
     .icon-star_iconed {
       margin-left: 35%; }
   .main {
-    min-height: 600px; } }
-
-@media only screen and (max-width: 620px) {
+    min-height: 600px; }
   .section__pic {
-    width: 400px; } }
+    width: 400px; }
+  .text__section {
+    font-size: 25px; } }
+
+@media only screen and (max-width: 320px) {
+  .menu__item {
+    margin: 0; } }
 
 /*** Стили относящиеся к модальному окну и содержанию ***/
 .popup h1,
@@ -561,6 +571,15 @@ section.content {
   top: 0;
   right: 0;
   left: 50%;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
   font-size: 16px;
   font-family: 'Tahoma', Arial, sans-serif;
   z-index: 10000;
@@ -671,8 +690,10 @@ section.content {
   margin-bottom: 10px; }
 
 .popup__wear {
-  width: 80%;
-  margin: 0 auto; }
+  -webkit-box-flex: 1;
+  -webkit-flex: 1;
+      -ms-flex: 1;
+          flex: 1; }
 
 .section__par {
   font-size: 20px;
@@ -685,17 +706,53 @@ section.content {
           flex: 1; }
 
 .button__section {
-  padding: 10px;
+  padding: 5px;
   -webkit-border-radius: 4px;
           border-radius: 4px;
   border: none;
   background: #a6d0ef;
-  color: #014b60;
   cursor: pointer;
   margin: 2px; }
   .button__section:hover {
-    background: #014b60;
+    background: #014b60; }
+
+.popup__button {
+  text-decoration: none;
+  color: #014b60; }
+  .popup__button:hover {
     color: #a6d0ef; }
+
+.form-group {
+  text-align: left;
+  margin-left: 5px;
+  margin-top: 10px; }
+
+.delivery {
+  text-align: left;
+  margin-left: 5px;
+  margin-top: 10px; }
+
+.deliv {
+  text-align: left;
+  padding: 0;
+  margin: 0; }
+
+.group__form {
+  margin-left: 30px;
+  padding: 5px;
+  -webkit-border-radius: 4px;
+          border-radius: 4px; }
+
+.group__input {
+  margin-left: 53px;
+  padding: 5px;
+  -webkit-border-radius: 4px;
+          border-radius: 4px; }
+
+.group__select {
+  padding: 5px;
+  -webkit-border-radius: 4px;
+          border-radius: 4px; }
 
 #slider {
   margin: 0 auto;
