--- a/app/sass/popup.scss
+++ b/app/sass/popup.scss
@@ -42,6 +42,8 @@ opacity: 1;
 top: 0;
 right: 0;
 left: 50%;
+display: flex;
+flex-direction: column;
 font-size: 16px;
 font-family: 'Tahoma', Arial, sans-serif;
 z-index: 10000;
@@ -138,8 +140,8 @@ padding: 5px;
 }
 
 .popup__wear{
-    width: 80%;
-    margin: 0 auto;
+    flex: 1;
+    
 }
 
 .section__par{
@@ -152,16 +154,62 @@ padding: 5px;
 }
 
 .button__section{
-    padding: 10px;
+    padding: 5px;
     border-radius: 4px;
     border: none;
     background: #a6d0ef;
-    color: #014b60;
     cursor: pointer;
     margin: 2px;
 
     &:hover{
-        background: #014b60;
-        color: #a6d0ef;
+        background: #014b60;        
     }
 } 
+
+.popup__button{
+    text-decoration: none;
+    color: #014b60;
+
+    &:hover{
+    color: #a6d0ef;                
+    }
+}
+
+.form{
+    
+}
+
+.form-group{
+    text-align: left; 
+    margin-left: 5px; 
+    margin-top: 10px;   
+}
+
+.delivery{
+    text-align: left; 
+    margin-left: 5px; 
+    margin-top: 10px;         
+}
+
+.deliv{
+    text-align: left;
+    padding: 0;
+    margin: 0
+}
+
+.group__form{
+    margin-left: 30px;
+    padding: 5px;
+    border-radius: 4px;
+}
+
+.group__input{
+    margin-left: 53px;
+    padding: 5px;
+    border-radius: 4px;
+}
+
+.group__select{
+    padding: 5px;
+    border-radius: 4px;
+}
