--- a/app/css/popup.css
+++ b/app/css/popup.css
@@ -200,14 +200,38 @@
     color: #a6d0ef; }
 
 .form-group {
-  text-align: left;
-  margin-left: 5px;
-  margin-top: 10px; }
+  text-align: center;
+  margin-top: 10px;
+  -webkit-box-flex: 1;
+  -webkit-flex: 1;
+      -ms-flex: 1;
+          flex: 1; }
+  .form-group label {
+    margin-right: 15px;
+    margin-bottom: 5px;
+    color: #014b60;
+    font-weight: 600; }
+  .form-group input {
+    color: #014b60; }
+
+.form-inputs {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: row;
+      -ms-flex-direction: row;
+          flex-direction: row; }
 
 .delivery {
   text-align: left;
-  margin-left: 5px;
+  margin-left: 20%;
   margin-top: 10px; }
+  .delivery label {
+    color: #014b60;
+    font-weight: 600; }
 
 .deliv {
   text-align: left;
@@ -215,13 +239,11 @@
   margin: 0; }
 
 .group__form {
-  margin-left: 30px;
   padding: 5px;
   -webkit-border-radius: 4px;
           border-radius: 4px; }
 
 .group__input {
-  margin-left: 53px;
   padding: 5px;
   -webkit-border-radius: 4px;
           border-radius: 4px; }
@@ -230,3 +252,15 @@
   padding: 5px;
   -webkit-border-radius: 4px;
           border-radius: 4px; }
+
+.btn-lg {
+  padding: 7px;
+  -webkit-border-radius: 4px;
+          border-radius: 4px;
+  background: #014b60;
+  color: #a6d0ef;
+  cursor: pointer;
+  border: none; }
+  .btn-lg:hover {
+    color: #014b60;
+    background: #a6d0ef; }
