--- a/app/css/style.css
+++ b/app/css/style.css
@@ -103,7 +103,7 @@ ul {
   color: #01234c; }
 
 .menu__item {
-  margin: 15px; }
+  padding: 15px; }
 
 .navigation-link {
   text-decoration: none;
@@ -516,11 +516,21 @@ section.content {
   .section__pic {
     width: 400px; }
   .text__section {
-    font-size: 25px; } }
+    font-size: 25px; }
+  .form-inputs {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-flex-wrap: wrap;
+        -ms-flex-wrap: wrap;
+            flex-wrap: wrap; } }
 
-@media only screen and (max-width: 320px) {
+@media only screen and (max-width: 360px) {
   .menu__item {
-    margin: 0; } }
+    margin: auto;
+    padding: 0; } }
 
 /*** Стили относящиеся к модальному окну и содержанию ***/
 .popup h1,
@@ -723,14 +733,38 @@ section.content {
     color: #a6d0ef; }
 
 .form-group {
-  text-align: left;
-  margin-left: 5px;
-  margin-top: 10px; }
+  text-align: center;
+  margin-top: 10px;
+  -webkit-box-flex: 1;
+  -webkit-flex: 1;
+      -ms-flex: 1;
+          flex: 1; }
+  .form-group label {
+    margin-right: 15px;
+    margin-bottom: 5px;
+    color: #014b60;
+    font-weight: 600; }
+  .form-group input {
+    color: #014b60; }
+
+.form-inputs {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: row;
+      -ms-flex-direction: row;
+          flex-direction: row; }
 
 .delivery {
   text-align: left;
-  margin-left: 5px;
+  margin-left: 20%;
   margin-top: 10px; }
+  .delivery label {
+    color: #014b60;
+    font-weight: 600; }
 
 .deliv {
   text-align: left;
@@ -738,13 +772,11 @@ section.content {
   margin: 0; }
 
 .group__form {
-  margin-left: 30px;
   padding: 5px;
   -webkit-border-radius: 4px;
           border-radius: 4px; }
 
 .group__input {
-  margin-left: 53px;
   padding: 5px;
   -webkit-border-radius: 4px;
           border-radius: 4px; }
@@ -753,6 +785,18 @@ section.content {
   padding: 5px;
   -webkit-border-radius: 4px;
           border-radius: 4px; }
+
+.btn-lg {
+  padding: 7px;
+  -webkit-border-radius: 4px;
+          border-radius: 4px;
+  background: #014b60;
+  color: #a6d0ef;
+  cursor: pointer;
+  border: none; }
+  .btn-lg:hover {
+    color: #014b60;
+    background: #a6d0ef; }
 
 #slider {
   margin: 0 auto;
