--- a/app/pug/popup.pug
+++ b/app/pug/popup.pug
@@ -19,21 +19,22 @@
     img(src='./img/wear.jpg')
     img(src='./img/girl.jpg')  
   form.form
-    .form-group
-      label(for='lead_city') В каком Вы городе?
-      input.group__form#lead_city.form-control(type='name', placeholder='к примеру, Киев')
-    .form-group 
-      label(for='lead_phone') Номер телефона
-      input.group__input#lead_phone.form-control(type='phone', placeholder='+38 123 456 7890')
+    .form-inputs
+      .form-group
+        label(for='lead_city') В каком Вы городе?
+        input.group__form#lead_city.form-control(type='name', placeholder='к примеру, Киев')
+      .form-group 
+        label(for='lead_phone') Номер телефона
+        input.group__input#lead_phone.form-control(type='phone', placeholder='+38 123 456 7890')
     .delivery  
       label(for='lead_delivery') Как желаете получить?
-      select.group__select#lead_delivery.form-control
-        option Доставка Новой Почтой
-        option Приеду в шоурум (г.Киев)
-        option Пока не знаю. Жду звонка
+        select.group__select#lead_delivery.form-control
+          option Доставка Новой Почтой
+          option Приеду в шоурум (г.Киев)
+          option Пока не знаю. Жду звонка
     p.deliv
       | Сразу после отправки заявки Вы окажетесь на странице определения размера.
       | Мы это сделали, чтобы вам было проще определиться точно с нужным размером, пока мы звоним вам.
       | Если вы не уверены в размере - мы поможем по телефону.
-  button.btn-lg.btn-success(type='submit', style='margin-top: 10px;') Отправить заявку                                   
-  a.close(title='Закрыть', href='#close')
+    button.btn-lg.btn-success(type='submit') Отправить заявку                                   
+    a.close(title='Закрыть', href='#close')  
