--- a/app/sass/style.scss
+++ b/app/sass/style.scss
@@ -76,7 +76,7 @@ ul{
 }
 
 .menu__item{
-  margin: 15px;
+  padding: 15px;
 }
 
 .navigation-link{
@@ -503,14 +503,18 @@ ul{
   .text__section{
     font-size: 25px;
   }
+  .form-inputs{
+    flex-direction: column;
+    flex-wrap: wrap;
+  }
 }
 
 
 
-@media only screen and (max-width: 320px) {
+@media only screen and (max-width: 360px) {
 	.menu__item{
-    margin: 0;
-    
+    margin: auto;
+    padding: 0;
   }  
 }
 
